Продолжение верстки. Добавление секции "Меню"

--- a/sourse/pre-relise/index.html
+++ b/sourse/pre-relise/index.html
@@ -32,6 +32,35 @@
         <p class="presentation__text">resto restaurant home page website template</p>
       </div>
     </section>
+    <section class="themenu">
+      <div class="themenu__wrapp">
+        <h2 class="themenu__head">The Menu</h2>
+        <div class="themenu__main">
+          <div class="themenu__item">
+            <p class="themenu__names"><span class="themenu__name">Voluptate cillum fugiat</span><span class="themenu__dir"></span><span class="themenu__cost"> $50</span></p>
+            <p class="themenu__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="themenu__item">
+            <p class="themenu__names"><span class="themenu__name">Arcu pede enim justo</span><span class="themenu__dir"></span><span class="themenu__cost"> $45</span></p>
+            <p class="themenu__description">Tuna, Sweetcorn, Cheese</p>
+          </div>
+          <div class="themenu__item">
+            <p class="themenu__names"><span class="themenu__name">Metus varius laoreet</span><span class="themenu__dir"></span><span class="themenu__cost"> $62</span></p>
+            <p class="themenu__description">Chicken, Mozzarella, Cheese, Onions</p>
+          </div>
+          <div class="themenu__item">
+            <p class="themenu__names"><span class="themenu__name">Cras dapibussemper nisi</span><span class="themenu__dir"></span><span class="themenu__cost"> $32</span></p>
+            <p class="themenu__description">Pineapple, Minced Beef, Cheese</p>
+          </div>
+        </div><a class="themenu__load" id="load" href="#">
+          <p class="themenu__load-text">Загрузить еще</p></a>
+      </div>
+    </section>
+    <section class="gallery">
+      <div class="gallery__wrapp">
+        <h2 class="gallery__head">The Gallery</h2>
+      </div>
+    </section>
     <script src="site.js"></script>
   </body>
 </html>
