--- a/sourse/pre-relise/index.html
+++ b/sourse/pre-relise/index.html
@@ -56,9 +56,48 @@
           <p class="themenu__load-text">Загрузить еще</p></a>
       </div>
     </section>
+    <section class="slider">
+      <div class="slider__wrapp">
+        <h2 class="slider__head header__h2">featured dishes</h2>
+        <div class="slider__content">
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__1.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__2.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__3.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__4.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__4.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__3.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__2.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+          <div class="slider__item"><img class="slider__image" src="images/dis/dis__1.jpg" alt="Fugiat nulla sint"/>
+            <p class="slider__text"><span class="slider__name">Fugiat nulla sint</span><span class="slider__cost">$30</span></p>
+            <p class="slider__description">Cheese, Tomato, Mushrooms, Onions</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="gallery">
       <div class="gallery__wrapp">
-        <h2 class="gallery__head">The Gallery</h2>
+        <h2 class="gallery__head header__h2">The Gallery</h2>
       </div>
     </section>
     <script src="site.js"></script>
